test/lexer/string.error.xfail.1.err
EXPECTED_END_OF_STRING[1020] in test/lexer/string.error.1.pytch, line 1, character 5:
Error: I was expecting a ' to end this string.
   +------------------------------------------------------+
   | test/lexer/string.error.1.pytch                      |
 1 | 'foo"                                                |
   |     ^ Error: I was expecting a ' to end this string. |
   | ^ Note: This is the beginning of the string.         |
 2 | "bar'                                                |
   +------------------------------------------------------+
EXPECTED_END_OF_STRING[1020] in test/lexer/string.error.1.pytch, line 2, character 5:
Error: I was expecting a " to end this string.
   +------------------------------------------------------+
   | test/lexer/string.error.1.pytch                      |
 1 | 'foo"                                                |
 2 | "bar'                                                |
   |     ^ Error: I was expecting a " to end this string. |
   | ^ Note: This is the beginning of the string.         |
   +------------------------------------------------------+
